2009-04-21  Steve Falkenburg  <sfalken@apple.com>

        Add registry-free CoCreateInstance API for WebKit clients: WebKitCreateInstance.

        Manifest-based registry-free COM continues to work for clients that have embedded
        manifests with isolated COM information.
        
        Reviewed by Adam Roben.

        * WebKit.vcproj/WebKit.def: Added WebKitCreateInstance.
        * WebKit.vcproj/WebKit.vcproj: Link against rpcrt4.dll for UUID hashing.
        * WebKit.vcproj/WebKit_debug.def: Added WebKitCreateInstance.
        * WebKitCOMAPI.cpp: Added.
        (CLSIDHash::hash):
        (CLSIDHash::equal):
        (CLSIDHashTraits::constructDeletedValue):
        (CLSIDHashTraits::isDeletedValue):
        (classFactory):
        (WebKitCreateInstance): New API.
        * WebKitCOMAPI.h: Added.

2009-04-21  Adam Roben  <aroben@apple.com>

        Rename JavaScriptCore_debug.dll to JavaScriptCore.dll in the Debug
        configuration

        This matches the naming scheme for WebKit.dll, and will be necessary
        once Safari links against JavaScriptCore.dll. This change also causes
        run-safari not to fail (because the launcher printed by FindSafari was
        always looking for JavaScriptCore.dll, never
        JavaScriptCore_debug.dll).

        Part of Bug 25305: can't run safari or drt on windows
        <https://bugs.webkit.org/show_bug.cgi?id=25305>

        Reviewed by Steve Falkenburg and Sam Weinig.

        * WebKit.vcproj/WebKit.vcproj: Use $(WebKitDLLConfigSuffix) for naming
        JavaScriptCore.{dll,lib}.

2009-04-20  Adam Roben  <aroben@apple.com>

        Build fix

        * MemoryStream.cpp:
        (MemoryStream::Clone): Fix typo introduced when implementing
        suggestions from patch review.

2009-04-20  Adam Roben  <aroben@apple.com>

        First part of <rdar://6395825> It takes over 20 sec to launch Safari
        with 500KB history file

        This ports the changes that were made to WebKit/mac's WebHistory